# SC-election-2025

./: LICENCE.md  README.md  contributors.csv  eligible.csv  endorsersAsked.csv  excluded.csv  flake.nix  gen.cabal  invited.csv
.github/ISSUE_TEMPLATE/: candidate-question.yml
.github/workflows/: nomination.yml  update-email.yml  update-voter-team.yml
app/: Config.hs  Contributor.hs  Log.hs  Main.hs  PullRequests.hs  Query.hs  Repositories.hs  Response.hs  pullRequests.gql  repositories.gql
doc/: candidate-template.md  email.md  endorse.md  exception-request.md  nominate.md
scripts/: check-nomination.sh  endorse.sh  self-nomination.sh  send-email.sh
